# extending_bazel_docker_rules

./: BUILD.bazel  Dockerfile  WORKSPACE.bazel
general_dir/pkg/: BUILD  some_test.bzl
